network-lab/containerlab/evidence/firewall/iptables-save.txt
# Generated by iptables-save v1.8.9 on Wed Jul 29 10:47:19 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A FORWARD -s 10.10.10.0/24 -d 10.10.20.0/24 -j DROP
-A FORWARD -s 10.10.20.0/24 -d 10.10.10.0/24 -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.10.10.0/24 -d 10.10.40.53/32 -p udp -m udp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -s 10.10.20.0/24 -d 10.10.40.53/32 -p udp -m udp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -s 10.10.10.0/24 -d 10.10.40.53/32 -p tcp -m tcp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -s 10.10.20.0/24 -d 10.10.40.53/32 -p tcp -m tcp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -s 10.10.10.0/24 -d 10.10.30.10/32 -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -s 10.10.20.0/24 -d 10.10.30.10/32 -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -s 10.10.10.0/24 -d 10.10.40.53/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -s 10.10.20.0/24 -d 10.10.40.53/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -s 10.10.10.0/24 -d 10.10.30.10/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -s 10.10.20.0/24 -d 10.10.30.10/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
COMMIT
# Completed on Wed Jul 29 10:47:19 2026
